Fixed spacing issues

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -13,7 +13,7 @@
     padding: 10px 0;
     background-color: #FFFFFF;
     width: 350px;
-    height: 400px;
+    height: 410px;
     position: absolute;
     right: 100px;
     top: 80px;
@@ -24,7 +24,7 @@
 }
 
 .register-card{
-    height: 480px;
+    height: 490px;
     top: 50px;
 }
 
